--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "url": "https://github.com/kheidrich/garagem-eletrica/issues"
   },
   "homepage": "https://github.com/kheidrich/garagem-eletrica#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
+  },
   "devDependencies": {
     "electron": "^1.8.4"
   }
