--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "garagem-eletrica",
   "version": "1.0.0",
   "description": "Uma ferramenta de gestão para uma oficina de elétrica automotiva.",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
+    "start": "electron .",
+    "dev": "concurrently --kill-others \"webpack-dev-server --config webpack.config.dev.js\" \"electron http://localhost:4000\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +23,16 @@
     "react-dom": "^16.3.0"
   },
   "devDependencies": {
-    "electron": "^1.8.4"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "concurrently": "^3.5.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "electron": "^1.8.4",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
