--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kheidrich/garagem-eletrica#readme",
   "dependencies": {
+    "materialize-css": "^0.100.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
@@ -29,8 +30,11 @@
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "electron": "^1.8.4",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.20.3",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
