--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/kheidrich/garagem-eletrica#readme",
   "dependencies": {
-    "materialize-css": "^0.100.2",
+    "materialize-css": "^1.0.0-beta",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
