--- a/.eslintrc
+++ b/.eslintrc
@@ -3,16 +3,20 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
-    "plugins": [
-        "react"
-    ],
+    "env": {
+        "node": true,
+        "browser": true
+    },
     "parser": "babel-eslint",
     "parserOptions": {
         "sourceType": "module",
         "ecmaVersion": 2018,
         "ecmaFeatures": {
-            "modules": true,
             "jsx": true 
         }
+    },
+    "rules": {
+        "react/boolean-prop-naming": ["warn", { "rule": "^(is|has)[A-Z]([A-Za-z0-9]?)+" }],
+        "react/default-props-match-prop-types": ["error"]
     }
 }
