--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Uma ferramenta de gestão para uma oficina de elétrica automotiva.",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "concurrently --kill-others \"webpack-dev-server --config webpack.config.dev.js\" \"electron http://localhost:4000\" ",
+    "start": "electron ./dist",
+    "build": "webpack --config webpack.config.prod.js",
+    "dev": "concurrently --kill-others \"webpack-dev-server --config webpack.config.dev.js\" \"cross-env NODE_ENV='development' electron ./src/main.js\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,14 +33,15 @@
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
-    "electron": "^1.8.4",
+    "electron": "^4.0.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.20.3",
-    "webpack": "^4.4.1",
+    "webpack": "^4.28.2",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   }
