migrate to TypeScript

--- a/package.json
+++ b/package.json
@@ -20,27 +20,33 @@
   },
   "homepage": "https://github.com/kheidrich/garagem-eletrica#readme",
   "dependencies": {
-    "materialize-css": "^1.0.0-beta",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "materialize-css": "^1.0.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "devDependencies": {
+    "@types/materialize-css": "^1.0.6",
+    "@types/node": "^12.11.2",
+    "@types/prop-types": "^15.7.3",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "concurrently": "^3.5.1",
+    "concurrently": "^3.6.1",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "electron": "^4.0.0",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.20.3",
+    "ts-lint": "^4.5.1",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.4",
     "webpack": "^4.28.2",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
